--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "*",
-    "babel-loader": "*",
-    "babel-preset-env": "*",
-    "babel-preset-es2015": "*",
-    "css-loader": "*",
-    "html-webpack-plugin": "*",
-    "style-loader": "*",
-    "webpack": "*",
-    "webpack-dev-server": "*"
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "html-webpack-plugin": "^2.29.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "d3": "*"
+    "d3": "^4.10.0"
   }
 }
