--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
-    "d3": "^4.10.0"
+    "d3": "^4.10.0",
+    "topojson": "^3.0.0"
   }
 }
